src/test/ui/issues/issue-42755.stderr
error: repetition matches empty token tree
  --> $DIR/issue-42755.rs:14:7
   |
LL |     ($($p:vis)*) => {} //~ ERROR repetition matches empty token tree
   |       ^^^^^^^^

error: aborting due to previous error

